--- a/css/style.css
+++ b/css/style.css
@@ -1989,6 +1989,6 @@ nav:not(.rank-math-breadcrumb) ul {
 @media (max-width: 480px) {
 h1 {
     font-size: 20px;
-    font-family: Goudy Old Style;
+    font-family:'Goudy Old Style';
 }
 }
