--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,8 @@ body{
 	margin-top: 3rem;
 	margin-bottom: 2rem;
 	flex:1;
-	line-height: 1.5;
+	line-height: 0;
+  font-family: 'Poppins', sans-serif;
 	font-size: 16px;
   text-align: justify;
 
