--- a/css/style.css
+++ b/css/style.css
@@ -1988,7 +1988,7 @@ nav:not(.rank-math-breadcrumb) ul {
 }
 
 @media (max-width: 480px) {
-.h1hm {
+h1 {
     font-size: 20px;
     font-family:'Goudy Old Style';
 }
