--- a/css/style.css
+++ b/css/style.css
@@ -1995,3 +1995,26 @@ h1 {
 }
 }
 
+/***PULSE-HEART-CUSTOM-CSS***/
+.heart {
+  fill: #ffffff;
+  height: 13px;
+  margin-left: 0.4rem;
+  margin-right: 0.4rem;
+  position: relative;
+  top: 2px;
+  width: 16px;
+  animation: pulse 1s ease infinite;
+}
+@keyframes pulse {
+0% {
+  transform: scale(1);
+}
+50% {
+  transform: scale(1.3);
+}
+100% {
+  transform: scale(1);
+}
+}
+   
